Präprozessor-Ausgabe und Kleinigkeiten

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ viele-zahlen
 zahlen-reihe
 zahlensysteme
 zeiger
+zeiger-in-dezimalnotation
 gtk-experimente/first
 gtk-experimente/second
 gtk-experimente/third
