--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,10 @@ hexSumme
 main
 minimum
 mittelwert
+string-basics
 string-eingabe
+struct0
+struct1
 taschenrechner-linux
 testTextEingabe
 viele-zahlen
