--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ gtk-experimente/table0
 gtk-experimente/schiffe0
 # possibly copyrighted artwork:
 gtk-experimente/sea.xpm
+# generated files:
+FUNKTION eDouble.png
