IP-Adressen fertig (v1.0)

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ gtk-experimente/second
 gtk-experimente/third
 gtk-experimente/table0
 gtk-experimente/schiffe0
+itw-cpp/ip-adressen
 # possibly copyrighted artwork:
 gtk-experimente/sea.xpm
 # generated files:
