--- a/itw-cpp/itw-cpp.cbp
+++ b/itw-cpp/itw-cpp.cbp
@@ -32,6 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="../Juni2018/sfml-tsp-gfx.cpp">
+			<Option target="Debug" />
+		</Unit>
 		<Unit filename="main.cpp" />
 		<Unit filename="personen.cpp">
 			<Option target="&lt;{~None~}&gt;" />
