--- a/Juni2018/Juni2018.cbp
+++ b/Juni2018/Juni2018.cbp
@@ -31,6 +31,9 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="sfml-graphics" />
+					<Add library="sfml-window" />
+					<Add library="sfml-system" />
 				</Linker>
 			</Target>
 		</Build>
