--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ gtk-experimente/table0
 gtk-experimente/schiffe0
 itw-cpp/ip-adressen
 # possibly copyrighted artwork:
+sql/2718_geodatendeutschland_3010_20180710.xlsx
 gtk-experimente/sea.xpm
+sql/staedte-daten.sql
+sql/www-fwiegleb-de-geo.xlsx
+sql/www-fwiegleb-de-geo.txt
 # generated files:
 FUNKTION eDouble.png
